[tool.poetry]
name = "ibx-sdk"
version = "0.2.0"
authors = [
    "Patrick Piper <patrick@ddiguru.com>",
    "Patrick Piper <ppiper@infoblox.com>",
    "Michael Smith <michaels@infoblox.com>",
]
description = "Infoblox API software development kit"
repository = "https://github.com/Infoblox-PS/ibx-sdk"
documentation = "https://infoblox-ps.github.io/ibx-sdk/"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.7"
click-option-group = "^0.5.6"
coloredlogs = "^15.0.1"
dnspython = "^2.7.0"
netaddr = "^1.3.0"
requests = "^2.32.3"
urllib3 = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
mkdocstrings-python = "^1.12.2"
mkdocs-material = "^9.5.44"

[tool.poetry.group.test.dependencies]
coverage = "^7.6.4"
pytest = "^8.3.3"
pytest-env = "^1.1.5"
pytest-dotenv = "^0.5.2"

[project.scripts]
get-log = 'ibx_sdk.bin.nios_get_log:main'
get-file = 'ibx_sdk.bin.nios_get_file:main'
get-supportbundle = 'ibx_sdk.bin.nios_get_supportbundle:main'
grid-backup = 'ibx_sdk.bin.nios_grid_backup:main'
grid-restore = 'ibx_sdk.bin.nios_grid_restore:main'
restart-service = 'ibx_sdk.bin.nios_restart_service:main'
restart-status = 'ibx_sdk.bin.nios_restart_status:main'
csvimport = 'ibx_sdk.bin.nios_csvimport:main'
csvexport = 'ibx_sdk.bin.nios_csvexport:main'
nios-certificate = 'ibx_sdk.bin.nios_certificate:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
