[project]
name = "ibx-sdk"
version = "0.8.1"
description = "Infoblox API software development kit"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = {file = "LICENSE.md"}
authors = [
    {name = "Michael Smith", email = "michaels@infoblox.com"},
    {name = "Patrick Piper", email = "patrick@ddiguru.com"},
    {name = "Patrick Piper", email = "ppiper@infoblox.com"},
    {name = "Michael Smith", email = "mjsmithkc@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "click-option-group>=0.5.6",
    "coloredlogs>=15.0.1",
    "syslog-rfc5424-formatter>=1.2.3",
    "httpx>=0.28.1",
    # "appdirs>=1.4.4",
    # "pydantic>=2.10.4",
    # "dnspython>=2.7.0",
    # "netaddr>=1.3.0",
    # "urllib3>=2.2.3",
]

[project.urls]
homepage = "https://infoblox-ps.github.io/ibx-sdk/"
documentation = "https://infoblox-ps.github.io/ibx-sdk/"
repository = "https://github.com/Infoblox-PS/ibx-sdk"

[project.optional-dependencies]
dev = [
    "mkdocstrings-python>=1.12.2",
    "mkdocs-material>=9.5.44",
    "ruff>=0.13.0",
    "pip-audit>=2.8.0",
    "pytest-asyncio>=0.26.0",
    "coverage>=7.6.4",
    "pytest>=8.3.3",
    "pytest-env>=1.1.5",
    "pytest-dotenv>=0.5.2",
]


[project.scripts]
get-log = 'ibx_sdk.bin.nios_get_log:main'
get-file = 'ibx_sdk.bin.nios_get_file:main'
get-supportbundle = 'ibx_sdk.bin.nios_get_supportbundle:main'
grid-backup = 'ibx_sdk.bin.nios_grid_backup:main'
grid-restore = 'ibx_sdk.bin.nios_grid_restore:main'
restart-service = 'ibx_sdk.bin.nios_restart_service:main'
restart-status = 'ibx_sdk.bin.nios_restart_status:main'
csvimport = 'ibx_sdk.bin.nios_csvimport:main'
csvexport = 'ibx_sdk.bin.nios_csvexport:main'
nios-certificate = 'ibx_sdk.bin.nios_certificate:cli'

async-get-log = 'ibx_sdk.bin.async_nios_get_log:main'
async-get-file = 'ibx_sdk.bin.async_nios_get_file:main'
async-get-supportbundle = 'ibx_sdk.bin.async_nios_get_supportbundle:main'
async-grid-backup = 'ibx_sdk.bin.async_nios_grid_backup:main'
async-grid-restore = 'ibx_sdk.bin.async_nios_grid_restore:main'
async-restart-service = 'ibx_sdk.bin.async_nios_restart_service:main'
async-restart-status = 'ibx_sdk.bin.async_nios_restart_status:main'
async-csvimport = 'ibx_sdk.bin.async_nios_csvimport:main'
async-csvexport = 'ibx_sdk.bin.async_nios_csvexport:main'
async-nios-certificate = 'ibx_sdk.bin.async_nios_certificate:cli'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibx_sdk"]
